Atualização contato site

--- a/serie.html
+++ b/serie.html
@@ -25,7 +25,7 @@
         <a href="filmes.html">Filmes</a>
         <a href="serie.html">Séries</a>
         <a href="lançamentos.html">Lançamentos</a>
-        <a href="">Contato</a>
+        <a href="contato.html">Contato</a>
       </nav>
     </div>
 
@@ -34,7 +34,7 @@
       <a href="filmes.html">Filmes</a>
       <a href="serie.html">Séries</a>
       <a href="lançamentos.html">Lançamentos</a>
-      <a href="">Contato</a>
+      <a href="contato.html">Contato</a>
     </nav>
   </header>
 
