--- a/lançamentos.html
+++ b/lançamentos.html
@@ -26,7 +26,7 @@
                 <a href="filmes.html">Filmes</a>
                 <a href="serie.html">Séries</a>
                 <a href="lançamentos.html">Lançamentos</a>
-                <a href="">Contato</a>
+                <a href="contato.html">Contato</a>
             </nav>
         </div>
 
@@ -35,7 +35,7 @@
             <a href="filmes.html">Filmes</a>
             <a href="serie.html">Séries</a>
             <a href="lançamentos.html">Lançamentos</a>
-            <a href="">Contato</a>
+            <a href="contato.html">Contato</a>
         </nav>
     </header>
 
